test/failing/argument_missmatch.yadl
// RUN: DEFAULT
tmp = map(default_iterator([1, 2, 3, 4]))

